name:              connect
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable connect
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base, containers, primes, random

executable sandbox
  hs-source-dirs:  src
  main-is:         Sandbox/Sandbox.hs
  build-depends:   base, containers
